--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,29 +1,30 @@
-root_path: "/home/demet/Desktop/CheXpert-v1.0-small"
+root_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
 
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
 
-mode: "train"
+mode: "test"
 
 data:
   size: [224, 224]
 
 model:
-  model_type: "cbam"
+  model_type: "resnet50"
   number_classes: 15
 
-## chex_small
-## chest14
+## chex_small - does a smaller amount because teh dataset was too big for testing
+## chest14 - does entire dataset
+## chex - when you want to do the entire dataset
 
 train:
-  name: "chex_small"
-  data_path: "/home/demet/Desktop/CheXpert-v1.0-small"
+  name: "chest14"
+  data_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
   start_epoch: 0
-  end_epoch: 31
+  end_epoch: 6
   batch: 16
   num_workers: 0
   chkpnt_step: 5
-  loss: "bce"
+  loss: "cel"
 
   learning_rate:
     momentum: 0.9
@@ -38,13 +39,13 @@ train:
 
 test:
   name: "chest14"
-  dataset_path: "/home/demet/Desktop/CheXpert-v1.0-small"
-  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/bcecbam_lr0.0001_bs16/5.pth"
+  dataset_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
+  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/celresnet50_lr0.0001_bs16/5.pth"
   batch: 128
   num_workers: 0
 
 
-experiment_name: "bce"
+experiment_name: "cel"
 log_dir: "/home/demet/PycharmProjects/thesis/training_logs"
 
 
