--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,4 +1,4 @@
-root_path: "/home/demet/Desktop/CheXpert-v1.0-small"
+root_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
 
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
@@ -9,7 +9,7 @@ data:
   size: [224, 224]
 
 model:
-  model_type: "vit_hybrid"
+  model_type: "vit"
   number_classes: 15
 
 ## chex_small - does a smaller amount because teh dataset was too big for testing
@@ -17,8 +17,8 @@ model:
 ## chex - when you want to do the entire dataset
 
 train:
-  name: "chex_small"
-  data_path: "/home/demet/Desktop/CheXpert-v1.0-small"
+  name: "chest14"
+  data_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
   start_epoch: 0
   end_epoch: 6
   batch: 16
@@ -43,14 +43,14 @@ train:
 ## chest14
 
 test:
-  name: "chex_small"
-  dataset_path: "/home/demet/Desktop/CheXpert-v1.0-small"
-  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chex_small/celvit_hybrid_lr0.0001_bs16/5.pth"
+  name: "chest14"
+  dataset_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
+  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/adamvit_lr0.0001_bs16/5.pth"
   batch: 128
   num_workers: 0
 
 
-experiment_name: "cel"
+experiment_name: "adam"
 log_dir: "/home/demet/PycharmProjects/thesis/training_logs"
 
 
