--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,13 +3,13 @@ root_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
 
-mode: "test"
+mode: "train"
 
 data:
   size: [224, 224]
 
 model:
-  model_type: "vit"
+  model_type: "resnet50"
   number_classes: 15
 
 ## chex_small - does a smaller amount because teh dataset was too big for testing
@@ -24,8 +24,8 @@ train:
   batch: 16
   num_workers: 0
   chkpnt_step: 5
-  loss: "cel"
-  metric:
+  loss:
+  metric: "proxy"
 
 ## loss: bce , cel , wcel
 ## metric: contrastive , triplet , or blank for none
@@ -45,12 +45,12 @@ train:
 test:
   name: "chest14"
   dataset_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
-  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/adamvit_lr0.0001_bs16/5.pth"
+  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/proxy_no_cel_no_smooth_doubleclassresnet50_lr0.0001_bs16/5.pth"
   batch: 128
   num_workers: 0
 
 
-experiment_name: "adam"
+experiment_name: "proxy_no_cel_no_smooth_doubleclass"
 log_dir: "/home/demet/PycharmProjects/thesis/training_logs"
 
 
