--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,13 +3,13 @@ root_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
 
-mode: "train"
+mode: "test"
 
 data:
   size: [224, 224]
 
 model:
-  model_type: "resnet50"
+  model_type: "ctran"
   number_classes: 15
 
 ## chex_small - does a smaller amount because teh dataset was too big for testing
@@ -20,12 +20,12 @@ train:
   name: "chest14"
   data_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
   start_epoch: 0
-  end_epoch: 6
+  end_epoch: 7
   batch: 16
   num_workers: 0
-  chkpnt_step: 5
-  loss:
-  metric: "proxy"
+  chkpnt_step: 3
+  loss: "cel"
+  metric:
 
 ## loss: bce , cel , wcel
 ## metric: contrastive , triplet , or blank for none
@@ -33,9 +33,9 @@ train:
 
   learning_rate:
     momentum: 0.9
-    decay: 0.5
+    decay: 0.1
     base_rate: 0.0001
-    steps: 10
+    steps: 3
 
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
@@ -45,12 +45,12 @@ train:
 test:
   name: "chest14"
   dataset_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
-  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/proxy_no_cel_no_smooth_doubleclassresnet50_lr0.0001_bs16/5.pth"
+  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/chest14/lr_scheduler_cel_ctran_lr0.0001_bs16/6.pth"
   batch: 128
   num_workers: 0
 
 
-experiment_name: "proxy_no_cel_no_smooth_doubleclass"
+experiment_name: "lr_scheduler_cel_"
 log_dir: "/home/demet/PycharmProjects/thesis/training_logs"
 
 
