--- a/configs/config_ubuntu.yaml
+++ b/configs/config_ubuntu.yaml
@@ -1,4 +1,4 @@
-root_path: "/home/demet/Desktop/CheXpert-v1.0-small"
+root_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
 
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
@@ -9,7 +9,7 @@ data:
   size: [224, 224]
 
 model:
-  model_type: "resnet50"
+  model_type: "ctran"
   number_classes: 15
 
 ## chex_small - does a smaller amount because teh dataset was too big for testing
@@ -20,15 +20,15 @@ train:
   name: "chest14"
   data_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
   start_epoch: 0
-  end_epoch: 4
+  end_epoch: 6
   batch: 16
   num_workers: 0
   chkpnt_step: 1
-  loss:
+  loss: "focal"
   metric: "proxy"
 
 ## loss: bce , cel , wcel , focal
-## metric: contrastive , triplet , or blank for none
+## metric: contrastive , triplet , proxy or blank for none
 
 
   learning_rate:
@@ -45,13 +45,13 @@ train:
 test:
   name: "chest14"
   dataset_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
-  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/resnet50/chest14/normalized_proxy_resnet50_lr0.0001_bs16/12.pth"
+  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/resnet50/proxy/chest14/normalized_proxy_resnet50_lr0.0001_bs16/3.pth"
   batch: 128
   num_workers: 0
 
 
-experiment_name: "normalized_proxy_"
-log_dir: "/home/demet/PycharmProjects/thesis/training_logs/resnet50/proxy"
+experiment_name: "focal_proxy_"
+log_dir: "/home/demet/PycharmProjects/thesis/training_logs/ctran/focal"
 
 
 
