--- a/configs/config_ubuntu.yaml
+++ b/configs/config_ubuntu.yaml
@@ -3,13 +3,13 @@ root_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
 ## Chest14: /home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize
 ## CheXpert: /home/demet/Desktop/CheXpert-v1.0-small
 
-mode: "train"
+mode: "test"
 
 data:
   size: [224, 224]
 
 model:
-  model_type: "ctran"
+  model_type: "cbam"
   number_classes: 15
 
 ## chex_small - does a smaller amount because teh dataset was too big for testing
@@ -18,14 +18,14 @@ model:
 
 train:
   name: "chest14"
-  data_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
+  data_path: "/home/demet/Desktop/CheXpert-v1.0-small"
   start_epoch: 0
   end_epoch: 6
   batch: 16
   num_workers: 0
   chkpnt_step: 1
   loss: "focal"
-  metric: "proxy"
+  metric: "triplet"
 
 ## loss: bce , cel , wcel , focal
 ## metric: contrastive , triplet , proxy or blank for none
@@ -43,15 +43,15 @@ train:
 ## chest14
 
 test:
-  name: "chest14"
-  dataset_path: "/home/demet/Desktop/Chest_Dataset/Chest_Dataset_Resize"
-  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/resnet50/proxy/chest14/normalized_proxy_resnet50_lr0.0001_bs16/3.pth"
+  name: "chex"
+  dataset_path: "/home/demet/Desktop/CheXpert-v1.0-small"
+  checkpoint_path: "/home/demet/PycharmProjects/thesis/training_logs/cbam/focal/chex/focal_contrastive_cbam_lr0.0001_bs16/5.pth"
   batch: 128
   num_workers: 0
 
 
-experiment_name: "focal_proxy_"
-log_dir: "/home/demet/PycharmProjects/thesis/training_logs/ctran/focal"
+experiment_name: "focal_triplet_"
+log_dir: "/home/demet/PycharmProjects/thesis/training_logs/cbam/focal"
 
 
 
